# QPlugged

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  rome.json  tsconfig.json  vite.config.ts
.changes/: add-facepanel.md  add-video-support.md  automated-ci.md  config.json  fix-covector-should-not-run-in-other-branches.md  fix-messagelist-cannot-load-further-message.md  fix-unable-to-select-message-content.md  fix-unexpected-gap-in-own-messages.md  fix-version-not-released.md  fix-windows-executable-error-0xc0000005.md  remove-js-obfuscator.md  support-linux.md
.github/workflows/: build.yml  covector-status.yml
.yarn/sdks/typescript/: package.json
src/: Api.ts  App.tsx  env.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.rs  lib.rs  main.rs
src/backend/: api.ts  endpoint.ts  fs.ts  internalApi.ts  ipc.ts  login.ts  ws.ts
src/backend/messaging/: converter.ts  decoder.ts  encoder.ts  index.ts  media.ts
src/components/: ContextMenu.tsx  RemoteAvatar.tsx  RemoteFixedSizeImage.tsx  Resizer.tsx  Scrollbar.tsx
src/hooks/: useResize.tsx
src/pages/: IndexPage.tsx
src/pages/index/: IndexPage.tsx
src/pages/login/: LoginPage.tsx
src/pages/main/: ChatBox.tsx  ContactList.tsx  FacePanel.tsx  MainPage.tsx  MessageList.tsx  (+1 more)
src/server/: debugger.ts  electron.d.ts  env.ts  main.ts  modules.ts  server.ts
src/typings/: endpoint.d.ts  fs.d.ts  internalApi.d.ts  login.d.ts  messaging.d.ts  ws.d.ts
src/utils/: getPromiseState.ts  getUidType.ts  toURL.ts
(+1 files in other folders)
